<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".ViewProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/gradient_profile"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="185dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/account_default_icon_profile" />

            <TextView
                android:id="@+id/username_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Gray"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/send_request_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-25dp"
            android:background="@drawable/oval_button_style"
            android:elevation="30dp"
            android:stateListAnimator="@null"
            android:text="@string/send_request"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/statistics_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/profile_vibes_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vibe_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/vibes_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibes" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_followers_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/followers_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_following_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/following_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/oval_button_style"
            android:text="@string/log_out"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>