...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/vibe_filter_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
