...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/profile_btn"
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/account_default_icon_profile" />

            <TextView
...
